# hotc

./: .Pipfile.swp  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.py
hotc/: __init__.py  main.py
hotc/data/: counters.csv  hotc_counters.csv
ipynb/: examples.ipynb
notebooks/: examples.ipynb
