[tool.poetry]
name = "hotc"
version = "2.1.1"
description = "A Python 3.9+ library to get walking counts for central Auckland, New Zealand from the Heart of the City API. The API has access to counts from 2012-01-23 to the present."
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license="MIT"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pandas = ">=1"
requests = ">=2"

[tool.poetry.dev-dependencies]
jupyter = ">=1.0"
pre-commit = ">=2.14.0"
nbstripout = ">=0.5.0"
black = ">=21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
